TabBar: fix text wrap style

--- a/ui/components/app/tab-bar/index.scss
+++ b/ui/components/app/tab-bar/index.scss
@@ -38,7 +38,6 @@
     &__content {
       padding: 12px 18px;
       display: flex;
-      flex-flow: row wrap;
       align-items: center;
       position: relative;
 
